Fixed desktop layout wrapping and scrollbar on desktop version of transaction section

--- a/src/sass/breakpoints/_small.scss
+++ b/src/sass/breakpoints/_small.scss
@@ -15,6 +15,7 @@
 		width: 20.9rem;
 		flex-shrink: 0;
 		margin: $main-ctn-margin 0 $main-ctn-margin 0;
+
 		&__top {
 			padding: 3.2rem 0 3.2rem 0;
 
@@ -47,6 +48,9 @@
 
 	main {
 		height: calc(100vh - ($main-ctn-margin * 2));
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
 		margin: $main-ctn-margin;
 		margin-left: 0;
 		padding: 6.4rem;
@@ -55,29 +59,23 @@
 		&::-webkit-scrollbar-thumb {
 			border: 8px solid transparent;
 		}
-
-		// flex-wrap: wrap;
-
-		// TODO: Podzielić na dwie kolumny (kolumny mają flex-dir: column a ich kontener flex-dir: row)
-
-		flex-direction: column;
-		align-content: center;
-		align-items: center;
 	}
 
 	.c-balance {
+		$box-width: 19.2rem;
 		background-color: $background-900;
 		position: relative;
 		width: 47.2rem;
-		height: 25.6rem;
+		height: 19.2rem;
 		align-items: flex-start;
 		justify-content: space-between;
 		border-radius: 12px;
 		font-size: 2.4rem;
 
 		.c-icon-box {
-			height: 19.2rem;
-			width: 19.2rem;
+			height: 100%;
+			width: $box-width;
+			flex-shrink: 0;
 			border-radius: 12px 0 64px 12px;
 			background: $gradient;
 
@@ -91,9 +89,16 @@
 		}
 
 		&__amount {
-			position: relative;
-			top: 30%;
-			right: 20%;
+			height: 100%;
+			width: calc(100% - $box-width);
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			padding-left: 4.8rem;
+
+			h2 {
+				font-size: 2.4rem;
+			}
 		}
 
 		&__decorative-block {
@@ -114,16 +119,31 @@
 		padding: 3.2rem;
 		border-radius: 12px;
 		background-color: $background-900;
+
+		&__header {
+			font-weight: 400;
+			color: $gray-light;
+			font-size: 2rem;
+			br {
+				display: none;
+			}
+		}
+
+		&__heading-box {
+			h2,
+			p {
+				font-size: 2rem;
+			}
+		}
 	}
 
 	.l-cards {
 		display: flex;
-		height: calc(100% - 7.9rem);
+		height: calc(100% - 6.4rem);
 		flex-wrap: wrap;
 		gap: 1.6rem;
 		margin-right: -1.6rem;
 		overflow-y: scroll;
-		overflow-y: overlay;
 	}
 
 	.c-card:last-child {
@@ -131,21 +151,40 @@
 	}
 
 	.c-transactions {
+		position: relative;
 		width: 47.2rem;
-		height: 75rem;
+		height: 68.6rem;
 		padding: 3.2rem;
 		border-radius: 12px;
 		background-color: $background-900;
+
+		&__header {
+			font-weight: 400;
+			color: $gray-light;
+			font-size: 2rem;
+			br {
+				display: none;
+			}
+		}
+
+		&__button {
+			font-size: 2rem;
+		}
 	}
 
 	.c-table {
-		position: static;
-		height: calc(100% - 6.4rem);
+		left: 3.2rem;
+		width: 90%;
+		height: calc(100% - 11.5rem);
 
 		&__record {
 			margin-right: 0;
 			padding-left: 0;
 			padding-right: 0;
+
+			@-moz-document url-prefix() {
+				padding-right: 2.4rem;
+			}
 		}
 
 		&__record:last-child {
